--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -8,9 +8,6 @@
   "rust-analyzer.linkedProjects": [
     "./Cargo.toml"
   ],
-  "[rust]": {
-    "editor.formatOnSave": true
-  },
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features",
     "editor.formatOnSave": true,
@@ -22,6 +19,11 @@
     "editor.formatOnSave": true,
     "editor.insertSpaces": true,
     "editor.tabSize": 2
+  },
+  "[rust]": {
+    "editor.formatOnSave": true,
+    "editor.insertSpaces": true,
+    "editor.tabSize": 4
   },
   "[typescript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features",
