--- a/template/Cargo.toml
+++ b/template/Cargo.toml
@@ -12,8 +12,8 @@ path = "src/server/main.rs"
 [dependencies]
 actix-files = "0.6.5"
 actix-web = "4.5.1"
+html-to-string-macro = "0.2.5"
 mime = "0.3.17"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 sha2 = "0.10.8"
-tiny-tsx = { git = "https://github.com/wirunekaewjai/tiny-tsx.git", rev = "8291028984d4627329a74dab042a9d0b4e5d10be" }
