--- a/template/Cargo.toml
+++ b/template/Cargo.toml
@@ -14,7 +14,7 @@ actix-files = "0.6.5"
 actix-web = "4.5.1"
 html-to-string-macro = "0.2.5"
 mime = "0.3.17"
-rs = { git = "https://github.com/wirunekaewjai/rs.git", rev = "f66ef2c703709b3a248044e5c779fb7028d16481" }
+rs = { git = "https://github.com/wirunekaewjai/rs.git", rev = "v0.1.0" }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 sha2 = "0.10.8"
