--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "PROJECT_NAME",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "module": "index.ts",
   "type": "module",
   "scripts": {
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@wirunekaewjai/ts": "github:wirunekaewjai/ts#v0.1.0",
+    "@wirunekaewjai/jetpack": "github:wirunekaewjai/jetpack#4e1817bdd24781e04d56a1781275720013178693",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.2",
     "tailwindcss": "^3.4.3"
